# hevy-workout-sync

./: .gitignore  Makefile  README.md  TODO.md  app.py  gemini-query.py  hevysync.py  pyproject.toml  requirements.txt  test_hevysync.py
prompts/: readme.md
